--- a/SERVER/.env.example
+++ b/SERVER/.env.example
@@ -2,7 +2,10 @@ PORT=3000
 NODE_ENV=development
 
 # YTMusic cookies are optional but recommended for better stability / personalized data
+# Raw `Cookie:` header string (used by `ytmusic-api`)
 YTMUSIC_COOKIES=
+# Exported cookies JSON array for `@distube/ytdl-core` (recommended for playback on Render)
+YTDL_COOKIES_JSON=
 YTMUSIC_GL=US
 YTMUSIC_HL=en
 
