--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: private-ytmusic-server
     runtime: node
     rootDir: SERVER
-    buildCommand: npm ci && npm run build
+    buildCommand: npm ci --include=dev && npm run build
     startCommand: npm run start
     autoDeploy: true
     envVars:
